--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ tsconfig.tsbuildinfo
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
+!.vscode/launch.json
 .vscode
 .idea
 *.suo
